# ray-tracer

./: Cargo.toml  README.md
src/: camera.rs  lib.rs  main.rs  rand.rs  triangle.rs
