[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["Adrian Herath <adrianisuru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ray-tracer"



[dependencies]
image = "0.23.12" # for png generation
clap = "2.33.3" # for argument parsing
glam = "0.12.0" # for linear algebra
rand = "0.8.3" # for random number generation
